# mu2e-Geant4-Simulation-Sample

./: CMakeLists.txt  GammaEneHistGenerator.py  README.md  main.cpp
include/: ActionInitialization.hh  DetectorConstruction.hh  EventAction.hh  ParticleGunAction.hh  ParticleSourceAction.hh  PhysicsList.hh  Readme.md  RunAction.hh  SensitiveDetector.hh  SteppingAction.hh
mac/: Readme.md  gammaSpectrum.mac  gen.mac  gengamma.mac  run.mac  vis.mac  visgamma.mac
notes/: Readme.md
src/: ActionInitialization.cpp  DetectorConstruction.cpp  EventAction.cpp  ParticleGunAction.cpp  ParticleSourceAction.cpp  PhysicsList.cpp  RunAction.cpp  SensitiveDetector.cpp  SteppingAction.cpp
